# proprietary

./: README.md
diag-router/: Android.bp  Makefile  Makefile.am  NOTICE  README.md  configure.ac  diag-router.pc.in
diag-router/router/: Makefile.am  app_cmds.c  circ_buf.c  common_cmds.c  diag.c  diag.h  diag_cntl.c  diag_cntl.h  diag_dci.c  diag_dci.h  diag_hidl.cpp  diag_hidl.h  diag_hidl_service.cpp  diag_hidl_service.h  diag_hidl_util.cpp  diag_hidl_util.h  diag_hidl_wrapper.h  diag_mhi.c  diag_mhi.h  diag_mux.c  diag_mux.h  dm.c  dm.h  hdlc.c  hdlc.h  image_version.c  image_version.h  list.h  masks.c  masks.h  mbuf.c  mbuf.h  pcie.c  peripheral-glinkpkt.c  peripheral-glinkpkt.h  peripheral-qrtr.c  peripheral-qrtr.h  peripheral-rpmsg.c  peripheral.c  peripheral.h  (+15 more)
diag-router/tools/: send_data.c
diag/PktRspTest/: Makefile.am
diag/klog/: Makefile.am
diag/src/: Makefile.am  diag_logger.c  diag_lsm.c  diag_lsm_adpl.c  diag_lsm_comm.c  diag_lsm_dci.c  diag_lsm_dci_i.h  diag_lsm_diag_id.c  diag_lsm_event.c  diag_lsm_event_i.h  diag_lsm_key_info.c  diag_lsm_log.c  diag_lsm_log_i.h  diag_lsm_msg.c  diag_lsm_msg_i.h  diag_lsm_pkt.c  diag_lsm_qdss.c  diag_lsmi.h  diag_qshrink4_db_parser.c  diag_shared_i.h  msg_arrays_i.c  ts_linux.c
diag/test/: Makefile.am  debug.c  test_diag.c
dspservices_ship/inc/: AEEQList.h  AEEStdErr.h  HAP_debug.h  HAP_farf.h  Makefile.am  configure.ac  dspqueue.h  remote.h  rpcmem.h  verify.h
ftm/: Android.mk  Makefile  Makefile.am  configure.ac  ftm_ant.c  ftm_bt.c  ftm_bt.h  ftm_bt_hci_pfal.h  ftm_bt_hci_pfal_linux.c  ftm_bt_persist.cpp  ftm_bt_persist.h  ftm_common.h  ftm_dbg.h  ftm_iot.c  ftm_iot.h  ftm_main.c  ftm_nfcnq.c  ftm_nfcnq.h  ftm_nfcnq_fwdl.c  ftm_nfcnq_fwdl.h  ftm_nfcnq_test.c  ftm_uwb.c  ftm_uwb.h  ftm_wlan.c  ftm_wlan.h  ftm_wlan_win.h  ftm_write_to_flash.c  qclinuxdef.h
ftm/wds/: Android.mk  wds_hci_pfal.h  wds_main.c
gps/eng-hub-msg-proto/: EHMsg.proto  LocationDataTypes.proto  Makefile.am  configure.ac  eng-hub-msg-proto.pc.in  protobuf_generate_script.sh
qcril-qmi-services/: CMakeLists.txt  access_terminal_service_v01.c  antenna_switch_interface_v01.c  card_application_toolkit_v02.c  coexistence_service_v01.c  device_management_service_v01.c  network_access_service_common_v01.c  network_access_service_v01.c  persistent_device_configuration_v01.c  phonebook_manager_service_v01.c  radio_frequency_radiated_performance_enhancement_v01.c  specific_absorption_rate_v01.c  subsystem_control_v02.c  user_identity_module_v01.c  voice_service_common_v02.c  voice_service_v02.c  wireless_messaging_service_v01.c
qmi-framework/qrtr_test/: Android.bp  Makefile.am  ReadMe.txt  qrtr_test_client.c  qrtr_test_server.c
qmi-framework/vsock_test/: Android.bp  Makefile.am  vsock_client.c  vsock_server.c
securemsm/: Makefile.am  configure.ac
securemsm/GPTEE/: Android.bp
securemsm/GPTEE_Sample_client/: Android.mk  GPTEE_Sample_client.cpp  GPTEE_Sample_client.h
securemsm/QHCK/: Android.mk
securemsm/QSEEComAPI/: Android.bp  QSEEComAPI.h
securemsm/TVMSecCamApp/: build.json
securemsm/TrustedUI/: Android.mk
securemsm/acvp_test/: ACVP.py
securemsm/config/: cpz_vendor_proprietary_board.mk  cpz_vendor_proprietary_product.mk  face_vendor_proprietary_board.mk  face_vendor_proprietary_product.mk  gp_vendor_proprietary_board.mk  gp_vendor_proprietary_product.mk  gpqese_vendor_proprietary_board.mk  gpqese_vendor_proprietary_product.mk  identity_vendor_proprietary_board.mk  identity_vendor_proprietary_product.mk  keymaster_vendor_proprietary_board.mk  keymaster_vendor_proprietary_product.mk  pmic_key_reset_vendor_proprietary_product.mk  qseecomcompat_vendor_proprietary_board.mk  qseecomd_vendor_proprietary_product.mk  smcinvoke_vendor_proprietary_board.mk  smcinvoke_vendor_proprietary_product.mk  soter_vendor_proprietary_board.mk  soter_vendor_proprietary_product.mk
securemsm/cryptfshw_common/: Android.mk
securemsm/daemon/: Android.mk  CListenersmci.cpp  Makefile.am  cfi_blacklist.txt  gpfspath_lv_oem_config.xml  listenerMngr.cpp  qseecomd.c  qseecomd_static.c
securemsm/diag_daemon/: Android.mk  Makefile.am  diag_dispatch.c  diagcomm.h  diagcommd.c
securemsm/esehal/: Android.mk  NOTICE
securemsm/keymaster_install_toolbox/: Android.mk  DeviceIdProvision.cpp  InstallKeybox.cpp  InstallKeybox.h  VerifyAttestation.cpp  VerifyAttestation.h  device_management_service_v01.c
securemsm/keymaster_utils/: Android.mk  KeymasterHalDevice.h  KeymasterKeyProvision.h  KeymasterUtils.h  NOTICE  android_keymaster_messages.cpp  android_keymaster_messages.h  android_keymaster_utils.h  attestation_record.cpp  attestation_record.h  authorization_set.h  cppbor.h  cppbor_parse.cpp  cppbor_parse.h  cppcose.h  keymaster_tags.h  km_version.h  openssl_err.h  openssl_utils.cpp  openssl_utils.h  pure_soft_remote_provisioning_context.cpp  spu_keymaster_utils.cpp  spu_keymaster_utils.h
securemsm/km_lite/: Makefile.am  keymaster.h  keymaster_defs.h
securemsm/peripheralStateUtils/: Android.bp  Android.mk
securemsm/pmic_key_reset/: Android.mk  pmic_key_reset.cpp
securemsm/rpmbClient/: Android.mk  Makefile.am  rpmbClient.c
securemsm/sampleclient/: Android.mk  Makefile.am  qseecom_sample_client.c
securemsm/security_profiles/: anorak61_tz_security_profile.xml  atherton_tz_security_profile.xml  aurora_tz_security_profile.xml  cliffs_tz_security_profile.xml  fillmore_tz_security_profile.xml  kailua_tz_security_profile.xml  lanai_tz_security_profile.xml  lassen_tme_security_profile.xml  lassen_tz_security_profile.xml  lemans_tz_security_profile.xml  monaco_tz_security_profile.xml  pineapple_tz_security_profile.xml  pitti_tz_security_profile.xml  sun_tz_security_profile.xml  volcano_tz_security_profile.xml  waipio_tz_security_profile.xml
securemsm/securitytest/: Android.mk
securemsm/smcinvoke/: Makefile.am  configure.ac  minkipc.pc.in
securemsm/smcinvokesample/: Android.mk
securemsm/soterclient/: Android.bp  Android.mk
wlan/cnss-daemon/: Android.mk  Makefile.am  cnss_cli.c  cnss_cli.h  cnss_dp.c  cnss_genl.c  cnss_genl.h  cnss_genl_msg.h  cnss_plat.c  (+27 more)
(+4181 files in other folders)
