ACLOCAL_AMFLAGS = -I m4

# Export dspservices headers
dspservicesheaders_includedir       = $(includedir)
dspservicesheaders_include_HEADERS  = $(top_srcdir)/AEEatomic.h
dspservicesheaders_include_HEADERS += $(top_srcdir)/AEEQList.h
dspservicesheaders_include_HEADERS += $(top_srcdir)/AEEstd.h
dspservicesheaders_include_HEADERS += $(top_srcdir)/AEEStdDef.h
dspservicesheaders_include_HEADERS += $(top_srcdir)/AEEStdErr.h
dspservicesheaders_include_HEADERS += $(top_srcdir)/AEEVaList.h
dspservicesheaders_include_HEADERS += $(top_srcdir)/remote.h
dspservicesheaders_include_HEADERS += $(top_srcdir)/remote64.h
dspservicesheaders_include_HEADERS += $(top_srcdir)/rpcmem.h
dspservicesheaders_include_HEADERS += $(top_srcdir)/verify.h
dspservicesheaders_include_HEADERS += $(top_srcdir)/HAP_farf.h
dspservicesheaders_include_HEADERS += $(top_srcdir)/HAP_pls.h
dspservicesheaders_include_HEADERS += $(top_srcdir)/HAP_debug.h
dspservicesheaders_include_HEADERS += $(top_srcdir)/dspqueue.h
